<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="729dp"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SearchBlank">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="26dp"
            android:layout_height="27dp"
            android:layout_marginStart="149dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="237dp"
            android:layout_marginBottom="707dp"
            android:contentDescription="@string/imagem_bandeira_ingles"
            tools:layout_editor_absoluteX="149dp"
            tools:layout_editor_absoluteY="44dp"
            app:srcCompat="@drawable/ingles"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="74dp"
            android:layout_height="21dp"
            android:layout_marginStart="182dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="156dp"
            android:layout_marginBottom="709dp"
            android:text="@string/idioma_ingles"
            android:textAlignment="center"
            android:textColor="#052D39"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="182dp"
            tools:layout_editor_absoluteY="48dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="119dp"
            android:layout_marginEnd="119dp"
            android:layout_marginBottom="538dp"
            android:hint="@string/texto_digite_uma_palavra"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#052D39"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="358dp"
            android:layout_height="64dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="395dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="319dp"
            android:backgroundTint="#5BD6FD"
            android:text="@string/texto_procurar"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="395dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
