<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="729dp"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SearchBlank">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="26dp"
            android:layout_height="27dp"
            android:layout_marginStart="149dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="237dp"
            android:layout_marginBottom="707dp"
            android:contentDescription="@string/imagem_bandeira_ingles"
            tools:layout_editor_absoluteX="149dp"
            tools:layout_editor_absoluteY="44dp"
            app:srcCompat="@drawable/ingles" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="74dp"
            android:layout_height="21dp"
            android:layout_marginStart="182dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="156dp"
            android:layout_marginBottom="709dp"
            android:text="@string/idioma_ingles"
            android:textAlignment="center"
            android:textColor="#052D39"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="182dp"
            tools:layout_editor_absoluteY="48dp"/>

        <EditText
            android:layout_width="174dp"
            android:layout_height="38dp"
            android:layout_marginStart="119dp"
            android:layout_marginEnd="119dp"
            android:layout_marginTop="202dp"
            android:layout_marginBottom="538dp"
            android:hint="@string/text_search_blank"
            android:fontFamily="sans-serif-condensed-light"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#052D39"
            android:textSize="32sp"
            tools:layout_editor_absoluteX="119dp"
            tools:layout_editor_absoluteY="202dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
