<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="729dp"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Splash">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="412dp"
            android:layout_height="422.15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/imgmulher"
            android:contentDescription="@string/imagem_mulher"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginTop="375.71dp"
            android:layout_marginBottom="324.29dp"
            android:layout_marginStart="167dp"
            android:layout_marginEnd="167dp"
            app:srcCompat="@drawable/icon"
            android:contentDescription="@string/imagem_livro"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="167dp"
            tools:layout_editor_absoluteY="375.71dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="188.43dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/title"
            android:contentDescription="@string/imagem_titulo"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="111.78dp"
            tools:layout_editor_absoluteY="470dp" />

        <TextView
            android:layout_width="347dp"
            android:layout_height="54dp"
            android:layout_marginTop="532dp"
            android:layout_marginBottom="192dp"
            android:layout_marginEnd="32.5dp"
            android:layout_marginStart="32.5dp"
            tools:layout_editor_absoluteX="32.5dp"
            tools:layout_editor_absoluteY="532dp"
            android:layout_marginVertical="30dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="347dp"
            android:layout_height="42dp"
            android:layout_marginVertical="22dp"
            app:layout_goneMarginEnd="32dp"
            android:layout_marginStart="33dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="608dp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="358dp"
            android:layout_height="64dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="395dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="319dp"
            android:backgroundTint="#5BD6FD"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:text="@string/botao_subscribe"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="674dp"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>